--- a/src/front/styles/cardOuterGLowEffect.css
+++ b/src/front/styles/cardOuterGLowEffect.css
@@ -1,3 +1,140 @@
+.container1 .card{
+  position: relative;
+  background: transparent; 
+  border: 0;
+  margin-top: -20px; /* Margem negativa para cima */
+  margin-bottom: -175px; /* Margem negativa para baixo */
+}
+
+.container1 .card .face{
+  width:300px;
+  height: 300px;
+  transition:.4s;
+  border-radius: 10px;
+}
+
+.container1 .card .face.face1{
+  position: relative;
+  background: #333;
+  display: flex;
+  /* justify-content: center;
+  align-content:center;
+  align-items: center; */
+  z-index: 1;
+  transform: translateY(0px);
+}
+
+.container1 .card:hover .face.face1{
+  transform: translateY(0);
+  box-shadow:
+    inset 0 0 60px whitesmoke,
+    inset 20px 0 80px #f0f,
+    inset -20px 0 80px #0ff,
+    inset 20px 0 300px #f0f,
+    inset -20px 0 300px #0ff,
+    0 0 50px #fff,
+    -10px 0 80px #f0f,
+    10px 0 80px #0ff;
+   
+}
+
+
+.container1 .card .face.face1 .content{
+  opacity: .7;
+  transition:  0.5s;
+  text-align: center;
+  width: 100%; 
+  height: auto; 
+  border-radius: 10px;
+}
+
+.container1 .card:hover .face.face1 .content{
+  opacity: 1;
+ 
+}
+
+.container1 .card .face.face1 .content i{
+  font-size: 3em;
+  color: white;
+  display: inline-block;
+   
+}
+
+.container1 .card .face.face1 .content h3{
+  font-size: 1em;
+  color: white;
+  text-align: center;
+  
+
+}
+
+.container1 .card .face.face1 .content img{
+  width: 100%; /* Isso faz a imagem ocupar toda a largura da div */
+  height: auto; /* Isso mantém a proporção da imagem */
+  display: block; /* Isso remove qualquer espaço em branco abaixo da imagem */
+}
+
+.container1 .card .face.face1 .content a{
+   transition: .5s;
+}
+
+.container1 .card .face.face2{
+   /* position: relative; */
+   background: rgba(128, 128, 128, 0.5);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0,0,0,.8);
+  transform: translateY(-300px);
+  
+}
+
+
+.container1 .card:hover .face.face2{
+    transform: translateY(0);
+    z-index: 2;
+    transform: translateY(-200px);
+    
+}
+
+
+
+.container1 .card .face.face2 .content p{
+  font-size: 15pt;
+  margin: 0 ;
+  padding: 0;
+  color:black;
+  opacity: 1;
+}
+
+.container1 .card .face.face2 .content button{
+  font-size: 15pt;
+  /* margin-top: 0; */
+  /* padding: 0; */
+  color:black;
+}
+
+/* .container .card .face.face2 .content a{
+  text-decoration:none;
+  color: black;
+  box-sizing: border-box;
+  outline : 1px dashed #333;
+  padding: 10px;
+  margin: 15px 0 0;
+  display: inline-block;
+} */
+
+/* .container .card .face.face2 .content a:hover{
+  background: #333 ;
+  color: whitesmoke; 
+  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
+} */
+
+
+/* _________________________________________________ */
+
 /* .container{
     position: relative;
   
@@ -5,22 +142,22 @@
     
   } */
   
-  .container .card{
+  /* .container .card{
     position: relative;
   background: transparent; /* Definir o fundo como transparente */
-  border: none; /* Remover a borda */
+   /* Remover a borda */
   /* background: #212529; */
-  }
   
-  .container .card .face{
+  
+  /* .container .card .face{
     width:400px;
     height: 300px;
     transition:.4s;
     border-radius: 10px;
     
-  }
+  } */
   
- .container .card .face.face1{
+ /* .container .card .face.face1{
     position: relative;
     background-image: url("https://picsum.photos/id/1/200");
     background-size: cover;
@@ -32,8 +169,8 @@
     z-index: 1;
     transform: translateY(0px);
   } 
-  
-  .container .card:hover .face.face1{
+   */
+  /* .container .card:hover .face.face1{
     transform: translateY(0);
     box-shadow:
       inset 0 0 60px whitesmoke,
@@ -45,7 +182,7 @@
       -10px 0 80px #f0f,
       10px 0 80px #0ff;
      
-  }
+  } */
   
   
   /* .container .card .face.face1 .content{
@@ -78,7 +215,7 @@
      transition: .5s;
   } */
   /* sombreado sem led e bg detail*/
-  .container .card .face.face2{
+  /* .container .card .face.face2{
      position: relative;
      opacity: .7;
      background: #212529;
@@ -89,21 +226,21 @@
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0,0,0,.8);
     transform: translateY(-300px);
-  }
+  } */
   
   /* direçao da açao */
-  .container .card:hover .face.face2{
+  /* .container .card:hover .face.face2{
     z-index: 2;
       transform: translateY(-100);
-  }
+  } */
   /*  */
-  .container .card .face.face2 .content p, a{
+  /* .container .card .face.face2 .content p, a{
     font-size: 15pt;
     margin: 0 ;
     padding: 0;
     color:white;
   }
-  
+   */
   /* .container .card .face.face2 .content a{
     text-decoration:none;
     color: white;
@@ -114,12 +251,12 @@
     display: inline-block;
   }
    */
-  .container .card .face.face2 .content a:hover{
+  /* .container .card .face.face2 .content a:hover{
     background: #333 ;
     color: whitesmoke; 
     box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
   }
-  
+   */
 
   /*  */
 
@@ -133,7 +270,7 @@
   .container .card{
     position: relative;
   background: transparent; /* Definir o fundo como transparente */
-  border: none; /* Remover a borda */
+ /* Remover a borda */
   /* background: #212529; 
   }
   
