--- a/src/front/styles/cardEffect.css
+++ b/src/front/styles/cardEffect.css
@@ -13,3 +13,13 @@
       10px 0 80px #0ff;
      
   }
+
+  .sombra{
+   background: rgba(128, 128, 128, 0.5);
+   padding: 0;
+   box-sizing: border-box;
+   box-shadow: 0 20px 50px rgba(0,0,0,.8);
+
+ }
+ 
+ 
