--- a/src/front/styles/icons.css
+++ b/src/front/styles/icons.css
@@ -14,59 +14,44 @@
     background-image: url('https://img.icons8.com/ios-glyphs/60/FD7E14/windows-10.png');
 }
 
-.ps-effect:hover{
-    transform: translateY(0);
-    box-shadow:
-      inset 0 0 60px whitesmoke,
-      inset 20px 0 80px rgb(0, 204, 255),
-      inset -20px 0 80px rgb(0, 78, 204),
-      inset 20px 0 300px rgb(0, 204, 255),
-      inset -20px 0 300px rgb(0, 78, 204),
-      0 0 50px #fff,
-      -10px 0 80px rgb(0, 204, 255),
-      10px 0 80px rgb(0, 78, 204);
-     
-  }
+.ps-effect.active, .ps-effect:hover {
+  transform: translateY(0);
+  box-shadow:
+    0 0 50px #fff,
+    -10px 0 80px rgb(0, 204, 255),
+    10px 0 80px rgb(0, 78, 204);
+}
 
-.xbox-effect:hover{
-    transform: translateY(0);
-    box-shadow:
-      inset 0 0 60px whitesmoke,
-      inset 20px 0 80px rgb(145, 255, 0),
-      inset -20px 0 80px rgb(28, 195, 2),
-      inset 20px 0 300px rgb(145, 255, 0),
-      inset -20px 0 300px rgb(28, 195, 2),
-      0 0 50px #fff,
-      -10px 0 80px rgb(145, 255, 0),
-      10px 0 80px rgb(28, 195, 2);
-     
-  }
+.xbox-effect.active, .xbox-effect:hover {
+  transform: translateY(0);
+  box-shadow:
+    /* inset 0 0 60px whitesmoke,
+    inset 20px 0 80px rgb(145, 255, 0),
+    inset -20px 0 80px rgb(28, 195, 2),
+    inset 20px 0 300px rgb(145, 255, 0),
+    inset -20px 0 300px rgb(28, 195, 2), */
+    0 0 50px #fff,
+    -10px 0 80px rgb(145, 255, 0),
+    10px 0 80px rgb(28, 195, 2);
+}
 
-  .pc-effect:hover{
-    transform: translateY(0);
-    box-shadow:
-      inset 0 0 60px whitesmoke,
-      inset 20px 0 80px rgb(255, 213, 0),
-      inset -20px 0 80px rgb(227, 125, 0),
-      inset 20px 0 300px rgb(255, 213, 0),
-      inset -20px 0 300px rgb(227, 125, 0),
-      0 0 50px #fff,
-      -10px 0 80px rgb(255, 213, 0),
-      10px 0 80px rgb(227, 125, 0);
-      
-     
-  }
+.pc-effect.active, .pc-effect:hover {
+  transform: translateY(0);
+  box-shadow:
+    /* inset 0 0 60px whitesmoke,
+    inset 20px 0 80px rgb(255, 213, 0),
+    inset -20px 0 80px rgb(227, 125, 0),
+    inset 20px 0 300px rgb(255, 213, 0),
+    inset -20px 0 300px rgb(227, 125, 0), */
+    0 0 50px #fff,
+    -10px 0 80px rgb(255, 213, 0),
+    10px 0 80px rgb(227, 125, 0);
+}
 
-  .nintendo-effect:hover{
-    transform: translateY(0);
-    box-shadow:
-      inset 0 0 60px whitesmoke,
-      inset 20px 0 80px rgb(255, 81, 68),
-      inset -20px 0 80px rgb(255, 0, 0),
-      inset 20px 0 300px rgb(255, 81, 68),
-      inset -20px 0 300px rgb(255, 0, 0),
-      0 0 50px #fff,
-      -10px 0 80px rgb(255, 81, 68),
-      10px 0 80px rgb(255, 0, 0);
-     
-  }
+.nintendo-effect.active, .nintendo-effect:hover {
+  transform: translateY(0);
+  box-shadow:
+    0 0 50px #fff,
+    -10px 0 80px rgb(255, 81, 68),
+    10px 0 80px rgb(255, 0, 0);
+}
