--- a/src/front/styles/cardOuterGLowEffect.css
+++ b/src/front/styles/cardOuterGLowEffect.css
@@ -1,15 +1,13 @@
-.container1 .card{
+.container1 .card {
   position: relative;
   background: transparent; 
   border: 0;
-  margin-top: -20px; /* Margem negativa para cima */
-  margin-bottom: -175px; /* Margem negativa para baixo */
 }
 
-.container1 .card .face{
-  width:300px;
-  height: 300px;
-  transition:.4s;
+.container1 .card .face {
+  width: 300px;
+  height: auto; /* Alterado para automático */
+  transition: .4s;
   border-radius: 10px;
 }
 
@@ -40,11 +38,11 @@
 
 
 .container1 .card .face.face1 .content{
-  opacity: .7;
+  /* opacity: .7; */
   transition:  0.5s;
   text-align: center;
   width: 100%; 
-  height: auto; 
+  height: 100%; 
   border-radius: 10px;
 }
 
@@ -60,12 +58,9 @@
    
 }
 
-.container1 .card .face.face1 .content h3{
-  font-size: 1em;
+.container1 .card .face.face2 .content h3 {
+  font-size: 1.5em;
   color: white;
-  text-align: center;
-  
-
 }
 
 .container1 .card .face.face1 .content img{
@@ -78,24 +73,23 @@
    transition: .5s;
 }
 
-.container1 .card .face.face2{
-   /* position: relative; */
-   background: rgba(128, 128, 128, 0.5);
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   padding: 20px;
+.container1 .card .face.face2 {
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-direction: column; /* Adicionado */
+  height: 100%; /* Alterado */
+  align-items: flex-end; /* Adicionado */
+  padding-top: auto;
   box-sizing: border-box;
-  box-shadow: 0 20px 50px rgba(0,0,0,.8);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, .8);
   transform: translateY(-300px);
-  
 }
 
 
 .container1 .card:hover .face.face2{
-    transform: translateY(0);
+    transform: translateY(1);
     z-index: 2;
-    transform: translateY(-200px);
+    transform: translateY(-300px);
     
 }
 
@@ -105,14 +99,13 @@
   font-size: 15pt;
   margin: 0 ;
   padding: 0;
-  color:black;
-  opacity: 1;
+  color:rgb(255, 255, 255);
 }
 
 .container1 .card .face.face2 .content button{
   font-size: 15pt;
   /* margin-top: 0; */
   /* padding: 0; */
-  color:black;
+  color:rgb(255, 255, 255);
 }
 
