--- a/src/front/styles/button.css
+++ b/src/front/styles/button.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
-    padding: 1;
-    font-family: 'Poppins', sans-serif;
+    padding: 0;
+    /* font-family: 'Poppins', sans-serif; */
 }
 
 .btn-effect {
