--- a/src/front/styles/cardOuterGLowEffect.css
+++ b/src/front/styles/cardOuterGLowEffect.css
@@ -2,6 +2,8 @@
   position: relative;
   background: transparent; 
   border: 0;
+  margin-bottom: 30px;
+  
 }
 
 .container1 .card .face {
@@ -9,6 +11,8 @@
   height: auto; /* Alterado para automático */
   transition: .4s;
   border-radius: 10px;
+  margin-bottom: 5px;
+  
 }
 
 .container1 .card .face.face1{
@@ -20,6 +24,7 @@
   align-items: center; */
   z-index: 1;
   transform: translateY(0px);
+  
 }
 
 .container1 .card:hover .face.face1{
@@ -44,6 +49,7 @@
   width: 100%; 
   height: 100%; 
   border-radius: 10px;
+  
 }
 
 .container1 .card:hover .face.face1 .content{
@@ -82,14 +88,14 @@
   padding-top: auto;
   box-sizing: border-box;
   box-shadow: 0 20px 50px rgba(0, 0, 0, .8);
-  transform: translateY(-300px);
+  transform: translateY(-00px);
 }
 
 
 .container1 .card:hover .face.face2{
     transform: translateY(1);
     z-index: 2;
-    transform: translateY(-300px);
+    transform: translateY(-100px);
     
 }
 
