--- a/src/front/styles/fontNove.css
+++ b/src/front/styles/fontNove.css
@@ -2,7 +2,7 @@
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "nove", sans-serif;
-    font-weight: 20; /* Ou outro valor mais fino, dependendo das opções disponíveis */
+    font-weight: 20; 
     font-style: normal;
     letter-spacing: 1px; 
 }
