--- a/src/front/styles/styles.css
+++ b/src/front/styles/styles.css
@@ -10,4 +10,8 @@
     color: rgb(189, 189, 189); 
   }
 
- 
+.fontRetro {
+    font-family: "gloridot", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
