--- a/src/front/styles/fonts.css
+++ b/src/front/styles/fonts.css
@@ -6,3 +6,9 @@ h1, h2, h3, h4, h5, h6 {
     font-style: normal;
     letter-spacing: 1px; 
 }
+
+.fontRetro {
+    font-family: "gloridot", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
